--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,17 +1,10 @@
+
 header{
   width:100%;
   height:100vh;
-  background-image: linear-gradient(to top, rgb(250, 250, 250) 80%,#6dcde0 20%);
+ 
 }
-#top{
-  height:40vh;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  border-radius:74% 26% 72% 28% / 25% 53% 47% 75%;
-  background-color: #e8fbff;
-  margin-top: 1%;
-}
+
 main{
   
   height:40vh;
@@ -19,14 +12,13 @@ main{
   justify-content:space-around;
   align-items:center;
 }
-.left{
-  background-image: linear-gradient(to left, rgb(250, 250, 250) 95%,#6dcde0 5%);
-margin;
-}
+
 .navbar{
   width:100%; height:7vh;
   display: flex; 
   align-items:center;
+  position: fixed;
+  top: 0;
  
 }
 p{
@@ -38,7 +30,7 @@ p{
 }
 #quote{
   text-shadow:5px 5px 20px black;
-  color:#114c74;
+  color:#032338;
 }
 #prevnotes{
   margin:5%;
@@ -56,7 +48,7 @@ h1{
     text-align: center;
     padding: 0px;
     font-size: 40px;
-    color:rgb(87, 85, 85);
+    color:rgb(34, 32, 32);
 }
 h2{
   font-family: 'Anton', sans-serif;
